--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="RecyclerView">
+    <style name="ScrollView">
         <item name="android:scrollbars">vertical</item>
         <item name="android:overScrollMode">ifContentScrolls</item>
     </style>
