--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="margin_extra_big">32dp</dimen>
 
     <dimen name="default_content_margin">@dimen/margin_regular</dimen>
+    <dimen name="button_content_padding">19dp</dimen>
     <dimen name="button_corner_radius">8dp</dimen>
     <dimen name="title_margin">11dp</dimen>
 </resources>
