--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources>
 
-    <style name="Button" parent="Widget.AppCompat.Button">
+    <style name="Button" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="backgroundTint">@color/btn_background</item>
+        <item name="rippleColor">@color/btn_ripple_color</item>
+        <item name="android:textColor">@color/btn_text_color</item>
         <item name="android:textAppearance">@style/Medium</item>
-        <item name="android:background">@drawable/btn_background</item>
-        <item name="android:textColor">@color/purple</item>
-        <item name="android:padding">19dp</item>
-        <item name="background">@drawable/btn_background</item>
+        <item name="android:padding">@dimen/button_content_padding</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
+        <item name="textAllCaps">false</item>
     </style>
 
     <style name="ThemeOverlay.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
