--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -96,9 +96,9 @@
         tools:text="@string/title_invalid_credentials"
         tools:visibility="visible" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_in_button"
-        style="@style/Button.Actionable"
+        style="@style/Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:enabled="false"
