--- a/features/user/src/main/res/layout/fragment_user.xml
+++ b/features/user/src/main/res/layout/fragment_user.xml
@@ -29,9 +29,9 @@
         app:layout_constraintTop_toBottomOf="@+id/user_avatar_image_view"
         tools:text="Виталий Белов" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_out_button"
-        style="@style/Button"
+        style="@style/Button.Dark"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/title_sing_out"
