--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -12,10 +12,12 @@
 
     <style name="ThemeOverlay.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="android:textAppearance">@style/Regular</item>
-        <item name="boxCornerRadiusTopStart">@dimen/button_corner_radius</item>
-        <item name="boxCornerRadiusTopEnd">@dimen/button_corner_radius</item>
-        <item name="boxCornerRadiusBottomStart">@dimen/button_corner_radius</item>
-        <item name="boxCornerRadiusBottomEnd">@dimen/button_corner_radius</item>
+        <item name="shapeAppearance">@style/DefaultShapeAppearance</item>
+    </style>
+
+    <style name="DefaultShapeAppearance">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/button_corner_radius</item>
     </style>
 
     <style name="ThemeOverlay.TextInputEditText" parent="Widget.AppCompat.EditText">
