Убрать из именования ThemeOverlay где ThemeOverlay и не используется

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="background">@color/dark_blue_light</item>
     </style>
 
-    <style name="AppBar.Transparent" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+    <style name="ThemeOverlay.Transparent" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
         <item name="android:elevation">0dp</item>
         <item name="elevation">0dp</item>
         <item name="android:background">@android:color/transparent</item>
