--- a/features/movies/src/main/res/values/styles.xml
+++ b/features/movies/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="ThemeOverlay.TextInputLayout.Search" parent="ThemeOverlay.TextInputLayout">
+    <style name="TextInputLayout.Search" parent="TextInputLayout">
         <item name="android:background">@android:color/transparent</item>
         <item name="boxBackgroundColor">@color/search_appbar_color</item>
         <item name="hintTextColor">@color/search_appbar_icons_color</item>
@@ -11,7 +11,7 @@
         <item name="startIconTint">@color/search_appbar_icons_color</item>
     </style>
 
-    <style name="ThemeOverlay.TextInputEditText.Search" parent="ThemeOverlay.TextInputEditText">
+    <style name="TextInputEditText.Search" parent="TextInputEditText">
         <item name="drawableTint">@color/search_appbar_icons_color</item>
         <item name="android:textColor">@color/light_transparent</item>
         <item name="android:textCursorDrawable">@null</item>
