Добавить разметку для клавиатуры

--- a/core/src/main/res/navigation/login_graph.xml
+++ b/core/src/main/res/navigation/login_graph.xml
@@ -4,6 +4,8 @@
     android:id="@+id/login_graph"
     app:startDestination="@id/login">
 
+    <!-- TODO: настроить navigation, чтобы не было возможности перейти на предыдущий фрагмент -->
+
     <fragment
         android:id="@+id/login"
         android:name="com.lockwood.themoviedb.login.presentation.ui.LoginFragment">
