--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -6,8 +6,30 @@
         <item name="android:textColor">@color/btn_text_color</item>
         <item name="android:textAppearance">@style/Medium</item>
         <item name="android:padding">@dimen/button_content_padding</item>
-        <item name="cornerRadius">@dimen/button_corner_radius</item>
+        <item name="shapeAppearance">@style/DefaultShapeAppearance</item>
         <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="Button.Rounded" parent="Button">
+        <item name="shapeAppearance">@style/RoundShapeAppearance</item>
+    </style>
+
+    <style name="Button.Rounded.Pin" parent="Button.Rounded">
+        <item name="backgroundTint">@color/btn_pin_background</item>
+        <item name="rippleColor">@color/btn_pin_ripple_color</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="Button.Outlined" parent="Button">
+        <item name="android:padding">0dp</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="shapeAppearance">@style/RoundShapeAppearance</item>
+    </style>
+
+    <style name="Button.Outlined.Pin" parent="Button.Outlined">
+        <item name="backgroundTint">@color/btn_pin_background</item>
+        <item name="rippleColor">@color/btn_pin_ripple_color</item>
+        <item name="android:padding">0dp</item>
     </style>
 
     <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
@@ -16,6 +38,7 @@
     </style>
 
     <style name="TextInputEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textCursorDrawable">@null</item>
         <item name="android:textAppearance">@style/Regular</item>
         <item name="android:padding">18dp</item>
         <item name="android:maxLines">1</item>
