--- a/features/login/src/main/res/layout/fragment_enter_pin.xml
+++ b/features/login/src/main/res/layout/fragment_enter_pin.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pin_fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.lockwood.themoviedb.login.presentation.ui.LoginActivity">
 
+    <ImageView
+        android:id="@+id/user_avatar_image_view"
+        android:layout_width="@dimen/user_avatar_size"
+        android:layout_height="@dimen/user_avatar_size"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_extra_big"
+        android:contentDescription="@string/user_avatar_description"
+        android:src="@drawable/ic_avatar_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/user_name_text_view"
+        style="@style/Title.Center"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/title_margin_big"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_avatar_image_view"
+        tools:text="Виталий Белов" />
+
+    <TextView
+        android:id="@+id/enter_pin_invalid_text_view"
+        style="@style/Regular.Center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_extra_big"
+        android:text="@string/invalid_pin_message"
+        android:textColor="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:spanCount="3"
+        tools:itemCount="12"
+        tools:listitem="@layout/item_pin_digit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
