--- a/features/login/src/main/res/values/dimens.xml
+++ b/features/login/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="keyboard_probably_height">200dp</dimen>
+    <dimen name="pin_digit_size">72dp</dimen>
+    <dimen name="item_indicator_size">8dp</dimen>
 </resources>
