--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
     </style>
 
     <style name="TextInputEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textCursorDrawable">@null</item>
         <item name="android:textAppearance">@style/Regular</item>
         <item name="android:padding">18dp</item>
         <item name="android:maxLines">1</item>
