--- a/core/src/main/res/values/type_dimens.xml
+++ b/core/src/main/res/values/type_dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_size_regular">16sp</dimen>
     <dimen name="text_size_big">18sp</dimen>
     <dimen name="text_size_title">32sp</dimen>
+    <dimen name="text_size_title_small">24sp</dimen>
 </resources>
