--- a/features/login/src/main/res/layout/fragment_pin.xml
+++ b/features/login/src/main/res/layout/fragment_pin.xml
@@ -25,21 +25,17 @@
             android:layout_marginEnd="@dimen/default_content_margin"
             android:text="@string/title_make_pin"
             android:textSize="@dimen/text_size_title_small"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+            app:layout_constraintBottom_toTopOf="@+id/keyboard"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="0dp"
+        <com.lockwood.pin.PinKeyboard
+            android:id="@+id/keyboard"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:itemCount="12"
-            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:listitem="@layout/item_pin_digit"
-            tools:spanCount="3" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
