--- a/features/pin/src/main/res/layout/item_pin_digit.xml
+++ b/features/pin/src/main/res/layout/item_pin_digit.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_pin_icon_root"
+    android:id="@+id/item_pin_digit_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/default_content_margin">
 
-    <ImageButton
-        android:id="@+id/item_pin_icon"
-        style="@style/Medium"
+    <Button
+        android:id="@+id/item_pin_digit_button"
+        style="@style/Button.Rounded.Pin"
         android:layout_width="@dimen/pin_digit_size"
         android:layout_height="@dimen/pin_digit_size"
-        android:background="?selectableItemBackgroundBorderless"
+        android:textAppearance="@style/Title"
         android:layout_gravity="center"
-        android:tint="@color/gray"
-        android:src="@drawable/ic_backspace"
+        android:gravity="center"
         android:textSize="@dimen/text_size_title"
-        tools:ignore="ContentDescription"
         tools:text="1" />
 
 </FrameLayout>
