--- a/features/pin/src/main/res/layout/item_pin_exit.xml
+++ b/features/pin/src/main/res/layout/item_pin_exit.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_pin_text_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/default_content_margin">
 
-    <Button
-        android:id="@+id/item_pin_text"
-        style="@style/Button.Outlined.Pin"
+    <TextView
+        android:id="@+id/item_pin_exit"
         android:layout_width="@dimen/pin_digit_size"
         android:layout_height="@dimen/pin_digit_size"
         android:layout_gravity="center"
+        android:background="?selectableItemBackgroundBorderless"
         android:gravity="center"
         android:textColor="@color/gray"
-        tools:text="1" />
+        android:text="@string/title_exit"
+        android:textAppearance="@style/Medium"
+        android:tint="@color/gray" />
 
 </FrameLayout>
