--- a/features/login/src/main/res/layout/fragment_pin.xml
+++ b/features/login/src/main/res/layout/fragment_pin.xml
@@ -29,7 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <com.lockwood.pin.PinKeyboard
+        <com.lockwood.pin.keyboard.PinKeyboard
             android:id="@+id/keyboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
