--- a/features/pin/src/main/res/drawable/indicator.xml
+++ b/features/pin/src/main/res/drawable/indicator.xml
@@ -2,4 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@android:color/white" />
+    <size
+        android:width="@dimen/item_indicator_size"
+        android:height="@dimen/item_indicator_size" />
 </shape>
