--- a/features/login/src/main/res/layout/fragment_pin.xml
+++ b/features/login/src/main/res/layout/fragment_pin.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pin_fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.lockwood.themoviedb.login.presentation.ui.LoginActivity">
@@ -11,29 +10,22 @@
         android:id="@+id/movie_appbar"
         layout="@layout/include_login_appbar" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.lockwood.pin.indicator.IndicatorGroup
+        android:id="@+id/indicators"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_content_margin"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintBottom_toTopOf="@+id/keyboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.lockwood.pin.keyboard.PinKeyboard
+        android:id="@+id/keyboard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <com.lockwood.pin.indicator.IndicatorGroup
-            android:id="@+id/indicators"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/default_content_margin"
-            android:layout_marginEnd="@dimen/default_content_margin"
-            app:layout_constraintBottom_toTopOf="@+id/keyboard"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <com.lockwood.pin.keyboard.PinKeyboard
-            android:id="@+id/keyboard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
